@startuml

title __GUI's Class Diagram__\n

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.KsGui {
        {static} - formatStartOfLine : boolean
        {static} - lineNr : int
        {static} + ou()
        {static} + ou()
        {static} + oun()
        {static} + oun()
        {static} + ounArgs()
        {static} + ounerr()
        {static} + ounerr()
        {static} + ounerr()
        {static} + setFormatStartOfLine()
        {static} - getStartOfLine()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.MainWindow {
        {static} - MESSAGES : ResourceBundle
        {static} - NUMBER_OF_BUTTONS : int
        {static} - TF_WIDTH : int
        - cmbCollisionTypes : JComboBox<String>
        - cmbHashFunctions : JComboBox<String>
        - colWidth : int
        - initialCapacity : int
        - loadFactor : float
        - map : ParsableMap<String, Car>
        - panEast : JPanel
        - panParam12 : JPanel
        - panParam12Events : JPanel
        - scrollEast : JScrollPane
        - scrollEvents : JScrollPane
        - scrollParam12 : JScrollPane
        - scrollTable : JScrollPane
        - sizeOfGenSet : int
        - sizeOfInitialSubSet : int
        - taEvents : JTextArea
        - taInput : JTextArea
        + MainWindow()
        + actionPerformed()
        {static} + createAndShowGUI()
        + mapGeneration()
        + mapPut()
        - appearance()
        - createMap()
        - handleButtons()
        - initComponents()
        - readMapParameters()
        - updateHashtableParameters()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.MainWindow.NotNegativeNumberVerifier {
        + verify()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    abstract class edu.ktu.ds.lab3.gui.MainWindowMenu {
        {static} - MESSAGES : ResourceBundle
        + MainWindowMenu()
        {abstract} + actionPerformed()
        - initComponents()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.Panels {
        {static} - SPACING : int
        - btns : List<JButton>
        - tfTexts : List<String>
        - tfs : List<JTextField>
        + Panels()
        + Panels()
        + getButtons()
        + getParametersOfTable()
        + getTfOfTable()
        - initGridOfButtons()
        - initTableOfParameters()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.Table {
        {static} + ARROW : String
        + prepareRenderer()
        + setModel()
        - appearance()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.TableModel {
        - delimiter : String
        - maxChainSize : int
        - table : String[][]
        + TableModel()
        + getColumnCount()
        + getColumnName()
        + getRowCount()
        + getValueAt()
        - split()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.ValidationException {
        - value : String
        + ValidationException()
        + ValidationException()
        + getValue()
    }
  }
  

  edu.ktu.ds.lab3.gui.MainWindow .up.|> java.awt.event.ActionListener
  edu.ktu.ds.lab3.gui.MainWindow -up-|> javax.swing.JFrame
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.demo.CarsGenerator : carsGenerator
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.utils.HashManager.HashType : ht
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.MainWindowMenu : mainWindowMenu
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : panButtons
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : panParam1
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : panParam2
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Table : table
  edu.ktu.ds.lab3.gui.MainWindow +-down- edu.ktu.ds.lab3.gui.MainWindow.NotNegativeNumberVerifier
  edu.ktu.ds.lab3.gui.MainWindow.NotNegativeNumberVerifier -up-|> javax.swing.InputVerifier
  edu.ktu.ds.lab3.gui.MainWindowMenu .up.|> java.awt.event.ActionListener
  edu.ktu.ds.lab3.gui.MainWindowMenu -up-|> javax.swing.JMenuBar
  edu.ktu.ds.lab3.gui.Panels -up-|> javax.swing.JPanel
  edu.ktu.ds.lab3.gui.Table -up-|> javax.swing.JTable
  edu.ktu.ds.lab3.gui.TableModel -up-|> javax.swing.table.AbstractTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
